--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,40 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<% include ./partials/header%>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Document</title>
-</head>
 <body>
+    <!-- Nav tabs -->
+    <nav class="navbar navbar-expand-sm bg-dark">
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Category</th>
-                <th>Author</th>
-                <th>YearPublish</th>
+        <!-- Links -->
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a href="#tab1Id" class="nav-link ">Delta library</a>
+            </li>
 
-            </tr>
-        </thead>
-        <tbody>
-            <% drinks.forEach(function(drink) { %>
-            <tr>
-                    <td class="text-danger"><%= drink.name %> </td>
-                    <td><%= drink.category %></td>
-                    <td><%= drink.author %></td>
-                    <td><%= drink.year_publish %></td>
-                </tr>
-            <% }); %>
-            
-        </tbody>
-    </table>
-        
-    </body>
-</html>
+            <li class="nav-item">
+                <a href="/logout" class="btn btn-danger">Logout</a>
+            </li>
+        </ul>
+
+    </nav>
+    <div class="container ">
+            <div>
+                   
+                            <select >  
+                                    <option value="1">ชื่อหนังสือ</option>
+                                    <option value="2">ประเภท</option>
+                                    <option value="3">ผู้แต่ง</option>
+                            </select>
+                            
+                    <input type="text"> <button>search</button>
+            </div>
+            <table class="table paginated">
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Category</th>
+                                    <th>Author</th>
+                                    <th>YearPublish</th>
+                    
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <% results.forEach(function(result) { %>
+                                <tr>
+                                        <td class="text-danger"><%= result.name %> </td>
+                                        <td><%= result.category %></td>
+                                        <td><%= result.author %></td>
+                                        <td><%= result.year_publish %></td>
+                                    </tr>
+                                <% }); %>
+                                
+                            </tbody>
+                        </table>
+                            
+        </div>
+        </body>
+    </html>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="/static/sc.js"></script>
