--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,23 +2,7 @@
 
 <body>
     <!-- Nav tabs -->
-    <nav class="navbar navbar-expand-sm navbar-dark bg-success">
-        <!-- Links -->
-        <ul class="navbar-nav navbar-left">
-            <li class="nav-item">
-                <a href="/" class="navbar-brand ">Delta library</a>
-            </li>
-            <li class="nav-item">
-                <a href="/" class="nav-link">username: <%=user.username%></a>
-            </li>
-            <li class="nav-item">
-                <a href="/clearCart" class="nav-link">cart <span class="badge badge-warning"><%=cart%></span></a>
-            </li>
-            <li class="nav-item">
-                <a href="/logout" class="btn btn-danger">Logout</a>
-            </li>
-    </nav>
-
+    <% include ./partials/navbar%>
     <div class="container ">
         <form action="/search" method="POST">
             <select name="searchOp">
