--- a/views/borrow_list.ejs
+++ b/views/borrow_list.ejs
@@ -9,7 +9,7 @@
                 <tr>
                     <th>borrow_id</th>
                     <th>date</th>
-                    <th>dateline</th>
+                    <th>deadline</th>
                     <th>qty</th>
                     <th>status</th>
                 </tr>
