--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,5 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-success">
     <!-- Links -->
-<<<<<<< HEAD
     <div class="container">
         <div>
             <ul class="navbar-nav mr-auto">
@@ -23,33 +22,12 @@
                     <a href="/borrowList" class="nav-link">borrow_list</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/logout" class="btn btn-danger">Logout</a>
+                        <a href="/returnList" class="nav-link">return_list</a>
+                    </li>
+                <li class="nav-item">
+                    <a href="/logout" class="btn btn-warning">Logout</a>
 
                 </li>
         </div>
     </div>
-=======
-    <ul class="navbar-nav navbar-left">
-        <li class="nav-item">
-            <a href="/" class="navbar-brand ">Delta library</a>
-        </li>
-        <li class="nav-item">
-            <a href="/" class="nav-link">username: <%=user%></a>
-        </li>
-        <li class="nav-item">
-            <a href="/clearCart" class="nav-link">cart <span class="badge badge-warning"><%=cart%></span></a>
-        </li>
-        <li class="nav-item">
-            <a href="/checkOut" class="nav-link">cheack out</a>
-        </li>
-        <li class="nav-item">
-            <a href="/borrowList" class="nav-link">borrow_list</a>
-        </li>
-        <li class="nav-item">
-                <a href="/returnList" class="nav-link">return_list</a>
-            </li>
-        <li class="nav-item">
-            <a href="/logout" class="btn btn-danger">Logout</a>
-        </li>
->>>>>>> bf5bd0885b7c2f9f5d879dfc5089b78a7041da5f
 </nav>
