--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -13,10 +13,7 @@
         <div>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a href="/clearCart" class="nav-link">cart <span class="badge badge-warning"><%=cart%></span></a>
-                </li>
-                <li class="nav-item">
-                    <a href="/checkOut" class="nav-link">cheack out</a>
+                    <a href="/cart" class="nav-link">cart <span class="badge badge-warning"><%=cart%></span></a>
                 </li>
                 <li class="nav-item">
                     <a href="/borrowList" class="nav-link">borrow_list</a>
